# courses

mipt-os-basic-2024/: .gitignore  Makefile
mipt-os-basic-2024/sem-template/: main.typ
mipt-os-basic-2024/sem01/: Makefile  main.typ  utils.typ
mipt-os-basic-2024/sem01/demo/01-hack/: hack.c
mipt-os-basic-2024/sem01/demo/02-hidden/: Смысл жизни
mipt-os-basic-2024/sem01/demo/04-make/: CMakeLists.txt  Makefile  lib1.c  lib1.h  lib2.c  lib2.h  main.c
mipt-os-basic-2024/sem01/demo/05-clang-format/: .clang-format  ugly.c
mipt-os-basic-2024/sem02/: encodings.typ  floats.typ  main.typ  utils.typ
mipt-os-basic-2024/sem03/: Makefile  main.typ  utils.typ
mipt-os-basic-2024/sem03/demo/04-fusefs/: CMakeLists.txt  main.cpp
mipt-os-basic-2024/sem03/demo/04-fusefs/cmake/: FindFUSE.cmake
mipt-os-basic-2024/sem04/: main.typ  utils.typ
mipt-os-basic-2024/sem05/: Makefile  main.typ  utils.typ
mipt-os-basic-2024/sem05/cheat-sheet/: Makefile  main.typ
mipt-os-basic-2024/sem06/: main.typ  utils.typ
mipt-os-basic-2024/sem07/: bubbles.typ  main.typ  utils.typ
mipt-os-basic-2024/sem08/: 3d.typ  main.typ  utils.typ
mipt-os-basic-2024/sem08/models/: cube.json  locomotive.json  locomotive.mtl
mipt-os-basic-2024/sem09/: Makefile  main.typ  utils.typ
mipt-os-basic-2024/sem10/: main.typ
mipt-os-basic-2024/sem11/: main.typ
mipt-os-basic-2024/sem12/: main.typ  utils.typ
mipt-os-basic-2024/sem13/: Makefile  main.typ
mipt-os-basic-2024/theme/: asm.typ  bubbles.typ  theme.typ
mipt-os-basic-2024/theme/fonts/: LICENSE
(+112 files in other folders)
